# 3DOF_System

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
examples/: 3DOF_System.ipynb  demo_3dof.py
src/3DOF_System/: animation.py  forces.py  system.py
src/three_dof_system/: animation.py
tests/: test_animation.py
